# deployment_validation

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  ownership.md  proxy.md  simple.md  spec.md  update.md
.github/workflows/: ci.yml
addresses/: known.json
docs/: config.md  spec.md
examples/: cmd.txt
examples/dvfs/: CErc20Delegator_0x5d3a536E4D6DbD6114cc1Ead35777bAB948E3643.dvf.json  frxETH_filtered.dvf.json  insecure.dvf.json
examples/tokenized-aave-v3/: README.md  foundry.toml
examples/tokenized-aave-v3/src/: AaveV3Lender.sol  AaveV3LenderFactory.sol  TokenizedStrategy.sol
examples/tokenized-aave-v3/src/interfaces/: IStrategyInterface.sol
examples/tokenized-aave-v3/src/interfaces/Aave/V3/: DataTypesV3.sol  IAtoken.sol  IPool.sol  IPoolAddressesProvider.sol  IPoolDataProvider.sol  IProtocolDataProvider.sol  IReserveInterestRateStrategy.sol  IRewardsController.sol  IScaledBalanceToken.sol  IStakedAave.sol  IVariableDebtToken.sol
examples/tokenized-aave-v3/src/periphery/: StrategyAprOracle.sol
lib/: lib.rs  types.rs  web3.rs
lib/bytecode_verification/: compare_bytecodes.rs  mod.rs  parse_json.rs  types.rs  verify_bytecode.rs
lib/dvf/: abstract_wallet.rs  config.rs  mod.rs  parse.rs  registry.rs
lib/state/: contract_state.rs  forge_inspect.rs  mod.rs
lib/utils/: mod.rs  pretty.rs  read_write_file.rs
src/: cached_proxy.rs  dvf.rs  fetch.rs  gentest.rs
tests/: ci_tests.sh  config.json  format_test.sh  test_bytecode_only_e2e.rs  test_decoding.rs  test_end_to_end.rs
tests/Contracts/: foundry.toml
tests/Contracts/script/: Deploy_0.s.sol  Deploy_1.s.sol  Deploy_2.s.sol  Deploy_3.s.sol  Deploy_4.s.sol  Deploy_5.s.sol  Deploy_6.s.sol  Deploy_AllValueTypes.s.sol  Deploy_CrazyHiddenStruct.s.sol  Deploy_FailingCreate.sol  Deploy_MaliciousToken.s.sol  Deploy_Proxy.s.sol  Extcodehash.sol
tests/Contracts/src/: AllValueTypes.sol  BytesMapping.sol  CrazyHiddenStruct.sol  CrazyStruct.sol  DynamicArrayOfStaticArray.sol  Enum.sol  FailingCreate.sol  MaliciousToken.sol  MyToken.sol  NestedMapping.sol  StaticArray.sol  StaticArrayOfDynamicArray.sol  StaticArrayOfStaticArray.sol  StaticArrayOfStruct.sol  StaticInMapping.sol  StringMapping.sol  StructInEvent.sol  StructInMapping.sol  StructInStruct.sol  TransparentUpgradeableProxy.sol
tests/data/: result_BytesMapping.json  result_CrazyStruct.json  result_DynamicArrayOfStaticArray.json  result_Enum.json  result_NestedMapping.json  result_StaticArray.json  result_StaticArrayOfDynamicArray.json  result_StaticArrayOfStaticArray.json  result_StaticArrayOfStruct.json  result_StaticInMapping.json  result_StringMapping.json  result_StructInMapping.json  result_StructInStruct.json  trace_BytesMapping.json  trace_CrazyStruct.json  trace_DynamicArrayOfStaticArray.json  trace_Enum.json  trace_NestedMapping.json  trace_StaticArray.json  trace_StaticArrayOfDynamicArray.json  trace_StaticArrayOfStaticArray.json  trace_StaticArrayOfStruct.json  trace_StaticInMapping.json  trace_StringMapping.json  trace_StructInMapping.json  trace_StructInStruct.json
tests/expected_dvfs/: AllValueTypes.dvf.json  AllValueTypes_operators_Anvil.dvf.json  AllValueTypes_operators_Geth.dvf.json  CrazyHiddenStruct.dvf.json  Deploy_0.dvf.json  Deploy_0_b1.dvf.json  Deploy_0_updated.dvf.json  Deploy_1.dvf.json  Deploy_1_b1.dvf.json  Deploy_1_updated.dvf.json  Deploy_2.dvf.json  Deploy_2_b1.dvf.json  Deploy_2_updated.dvf.json  Deploy_3.dvf.json  Deploy_3_b1.dvf.json  Deploy_3_updated.dvf.json  Deploy_4.dvf.json  Deploy_4_b1.dvf.json  Deploy_4_updated.dvf.json  Deploy_5.dvf.json  Deploy_5_b1.dvf.json  Deploy_5_updated.dvf.json  Deploy_6_b1.dvf.json  Deploy_6_updated.dvf.json  Hardhat.dvf.json  HardhatUp.dvf.json  HardhatUp_old.dvf.json  Hardhat_old.dvf.json  MyToken.dvf.json  PullPayment.dvf.json  PureChild.dvf.json  PureDeployer.dvf.json  TransparentUpgradeableProxy.dvf.json  WorkingChild_0x603e1bd79259ebcbaaed0c83eec09ca0b89a5bcc.dvf.json  WorkingChild_0x9cfa6d15c80eb753c815079f2b32ddefd562c3e4.dvf.json  WorkingChild_0xeebe00ac0756308ac4aabfd76c05c4f3088b8883.dvf.json
tests/hardhat/: hardhat.config.js  package.json
tests/hardhat/contracts/: Hardhat.sol  HardhatUp.sol
tests/hardhat/scripts/: Deploy_Hardhat.js  Deploy_HardhatUp.js
tests/hardhat_2_0/: .gitignore  hardhat.config.js  package.json
tests/hardhat_2_0/scripts/: Deploy_Hardhat.js  Deploy_HardhatUp.js
tests/with_metadata/: foundry.toml
tests/with_metadata/script/: DeployPureFactory.s.sol  Deploy_Factory.s.sol
tests/with_metadata/src/: PullPayment.sol  PureFactory.sol
