[package]
name = "dv"
version = "0.9.0"
edition = "2021"

[[bin]]
name = "dv"
path = "src/dvf.rs"

[[bin]]
name = "fetch-from-etherscan"
path = "src/fetch.rs"

[[bin]]
name = "gentest"
path = "src/gentest.rs"

[[bin]]
name = "cached_proxy"
path = "src/cached_proxy.rs"

[lib]
name = "dvf_libs"
path = "lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", default-features = true, features = ["env-filter", "fmt"]}
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
substring = "1.4.5"
clap = { version = "3.1.6", features = ["derive"]}
colored = "1.0.0"
prettytable-rs = "0.10.0"
regex = "1"
bigint = "1"
tiny-keccak = { version = "2.0.0", features = ["sha3", "keccak"] }
hex = "0.4"
ethers = { version = "2.0.8", features = ["solc"] }
ethers-contract = "2.0.8"
ethers-core = { version = "2.0.8" }
ethers-etherscan = { version = "2.0.8" }
ethers-providers = "2.0.8"
ethers-signers = {version = "2.0.8", features = ["ledger", "yubi", "yubihsm"]}
ethers-solc = "2.0.8"
semver = { version = "1.0.17", features = ["serde"] }
toml = "0.7.4"
dirs-next = "2.0.0"
zip = "0.6.6"
tempfile = "3.6.0"
bytes = "1.4.0"
async-trait = "0.1.69"
thiserror = "1.0.40"
sha3 = "0.10.8"
rustc-hex = "2.1.0"
indicatif = "0.17.6"
console = "0.15.7"
actix-web = "4.7.0"
scanf = "1.2.1"
dotenv = "0.15.0"
time = "0.3.36"
foundry-compilers = "0.11.6"
alloy = { version = "0.6.4", features = ["full"] }
alloy-rpc-types = "0.6.4"
alloy-rpc-types-trace = "0.6.4"
alloy-signer-local = "0.6.4"
alloy-signer-ledger = "0.6.4"
alloy-chains = { version = "0.1.47", features = ["serde"] }
rand = "0.8.5"
foundry-compilers-core = "0.12.3"
alloy-json-abi = "0.8.12"
alloy-dyn-abi = { version = "0.8.12", features = ["eip712"] }
ruint = "1.12.3"
alloy-signer = { version = "0.6.4", features = ["eip712"] }
foundry-block-explorers = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0.12"
env_logger = "0.11.5"
