[package]
name = "dv"
version = "0.9.0"
edition = "2021"

[[bin]]
name = "dv"
path = "src/dvf.rs"

[[bin]]
name = "fetch-from-etherscan"
path = "src/fetch.rs"

[[bin]]
name = "gentest"
path = "src/gentest.rs"

[[bin]]
name = "cached_proxy"
path = "src/cached_proxy.rs"

[lib]
name = "dvf_libs"
path = "lib/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.7.0"
alloy = { version = "0.6.4", features = ["full"] }
alloy-chains = { version = "0.1.47", features = ["serde"] }
alloy-dyn-abi = { version = "0.8.12", features = ["eip712"] }
alloy-json-abi = "0.8.12"
alloy-rpc-types = "0.6.4"
alloy-rpc-types-trace = "0.6.4"
alloy-signer = { version = "0.6.4", features = ["eip712"] }
alloy-signer-ledger = "0.6.4"
alloy-signer-local = "0.6.4"
async-trait = "0.1.69"
bigint = "1"
bytes = "1.4.0"
clap = { version = "3.1.6", features = ["derive"] }
colored = "1.0.0"
console = "0.15.7"
dirs-next = "2.0.0"
dotenv = "0.15.0"
foundry-block-explorers = "0.9.0"
foundry-compilers = "0.11.6"
foundry-compilers-core = "0.12.3"
hex = "0.4"
indicatif = "0.17.6"
prettytable-rs = "0.10.0"
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
ruint = "1.12.3"
rustc-hex = "2.1.0"
scanf = "1.2.1"
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sha3 = "0.10.8"
substring = "1.4.5"
tempfile = "3.6.0"
thiserror = "1.0.40"
time = "0.3.36"
tiny-keccak = { version = "2.0.0", features = ["sha3", "keccak"] }
tokio = { version = "1", features = ["full"] }
toml = "0.7.4"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", default-features = true, features = ["env-filter", "fmt"] }
zip = "0.6.6"

[dev-dependencies]
assert_cmd = "2.0.12"
env_logger = "0.11.5"
